# project-relepaper

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  relevant_articles.tldr
src/openreviewstore/: __init__.py  constants.py  logger.py  setup_logger.py
src/openreviewstore/parsing/: OpenReviewClients.py  __init__.py  _get_all_venues_name.py  _identify_the_client_for_venue.py  count_statistics.py  download_all copy.py  download_all.py  get_notes_for_venue.py  identify_client_for_venue.py  parse.py  user.py
src/openreviewstore/parsing/clientapi/: get_client_info.py  get_current_user_info.py  identify_client_api_version_for_venue.py
src/openreviewstore/parsing/note/: download_pdf_for_note.py  download_supplementaries_material_for_note.py  download_supplementary_material_for_note.py  get_reviews_for_note_apiv1.py  get_reviews_for_note_apiv2.py  process_note.py  save_note.py
src/openreviewstore/parsing/submissions/: get_all_venues_name.py  get_submissions_of_venue_apiv1.py  get_submissions_of_venue_apiv2.py  save_venue.py
src/openreviewstore/parsing/venue/: get_all_venues_name.py  get_notes_for_venue.py  get_submissions_of_venue_apiv1.py  get_submissions_of_venue_apiv2.py  save_venue.py
src/relepaper/: __init__.py  main.py  setup_logger.py
src/relepaper/agenture/: relevantic_agent.py
src/relepaper/agenture/relevantic/: reformulator.py  relevant_pdfs.py
src/relepaper/config/: constants.py  dev_settings.py  logger.py  settings.py
src/relepaper/containers/: core.py
src/relepaper/domains/googlescholar/: scrapless.py  serpapi.py
src/relepaper/domains/langgraph/: interfaces.py
src/relepaper/domains/openreviewstore/: download_all.py
src/relepaper/domains/pdf_exploring/: interfaces.py
src/relepaper/openreviewnet/: __init__.py  count_statistics.py  download_all.py
src/relepaper/openreviewnet/clientapi/: OpenReviewClients.py  get_client_info.py  identify_client_api_version_for_venue.py
src/relepaper/openreviewnet/note/: Note.py  process_note.py
src/relepaper/openreviewnet/venue/: get_all_venues_name.py  get_notes_for_venue.py  get_submissions_of_venue_apiv1.py  get_submissions_of_venue_apiv2.py
src/relepaper/presenters/: console_presenter.py  gradio_presenter.py  interfaces.py  pdf_download_presenter.py
src/relepaper/views/: interfaces.py
src/site_parser/: index.html  index2.html  index3.html  main.py  main2.py  main3.py
tests/: test_container.py
(+78 files in other folders)
