[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openreviewstore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Albert M", email = "rinkorn.alb@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openreview-py>=1.47.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
lint = [
    "ruff>=0.11.2",
]
test = [
    "pytest>=8.3.5",
]
